force-app/main/default/objects/Package_Details__c/Package_Details__c.object-meta.xml
<CustomObject>
    <label>Master Detail Way/Purpose of Financing</label>
    <nameField>
        <label>Package Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Detail Way/Purpose of Financing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>