force-app/main/default/objects/Package_Details__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>