force-app/main/default/objects/Package_Details__c/fields/Max_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Max_Exposure__c</fullName>
    <label>Max Exposure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>