force-app/main/default/objects/Package_Details__c/fields/Min_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Min_Exposure__c</fullName>
    <label>Min Exposure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>