force-app/main/default/objects/Package_Details__c/fields/Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_Id__c</fullName>
    <label>Package Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>