force-app/main/default/objects/Package_Details__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>