force-app/main/default/objects/Package_Details__c/fields/Purpose_of_Financing__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Financing__c</fullName>
    <label>Purpose of Financing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>